--- a/Imato.Reflection/Imato.Reflection.csproj
+++ b/Imato.Reflection/Imato.Reflection.csproj
@@ -1,8 +1,7 @@
 ﻿	<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -19,7 +18,7 @@
 		<PackageTags>reflection utils</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReleaseNotes>Ready to use</PackageReleaseNotes>
-		<Version>1.2.0</Version>
+		<Version>1.5.0</Version>
 		<AssemblyName>Imato.Reflection</AssemblyName>
 		<PackageIcon>icon.png</PackageIcon>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -35,6 +34,7 @@
 	
   <ItemGroup>
     <PackageReference Include="FastMember" Version="1.5.0" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
