--- a/Imato.Reflection/Imato.Reflection.csproj
+++ b/Imato.Reflection/Imato.Reflection.csproj
@@ -18,7 +18,7 @@
 		<PackageTags>reflection utils</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReleaseNotes>Ready to use</PackageReleaseNotes>
-		<Version>1.6.0</Version>
+		<Version>1.6.1</Version>
 		<AssemblyName>Imato.Reflection</AssemblyName>
 		<PackageIcon>icon.png</PackageIcon>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -34,7 +34,10 @@
 	
   <ItemGroup>
     <PackageReference Include="FastMember" Version="1.5.0" />
-    <PackageReference Include="System.Text.Json" Version="8.0.1" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
+	<Target Name="CopyPackege" AfterTargets="Pack">
+		<Exec Command="copy $(OutputPath)..\$(PackageId).$(PackageVersion).nupkg $(NUGET_PATH)local /Y&#xD;&#xA;rmdir $(NUGET_PATH)packages\$(PackageId)\$(PackageVersion) /Q /S" />
+	</Target>
 </Project>
